apps/nextcloud-fpm/production/resources/nextcloud/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: nextcloud
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/proxy-body-size: "16G"
spec:
  tls:
  - hosts:
    - nextcloud.jz-c.org
    secretName: nextcloud-jz-c-org-production-tls
  rules:
  - host: nextcloud.jz-c.org
    http:
      paths:
      - backend:
          serviceName: nextcloud
          servicePort: 80
